fix: padding in article title & p for whitespace

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -119,11 +119,13 @@
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
   font-size: 18px;
   text-align: center;
+  padding: 5px;
 }
 
 .footer {
